--- a/src/WPFDesktopUI/Views/ShellView.xaml
+++ b/src/WPFDesktopUI/Views/ShellView.xaml
@@ -8,7 +8,7 @@
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
         Icon="Images/icon-sangwa.ico"
-        Title="Invoice Importer by Sangwa" Height="600" Width="1000">
+        Title="Invoice Importer by Sangwa" Height="600" Width="1000" MinHeight="400" MinWidth="400">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
