--- a/src/WPFDesktopUI/Views/QuickBooks/QuickBooksSidePaneView.xaml
+++ b/src/WPFDesktopUI/Views/QuickBooks/QuickBooksSidePaneView.xaml
@@ -255,14 +255,14 @@
                                       Grid.Column="1"
                                       Style="{StaticResource QbSidePaneValue}"
                                       ToolTipService.ShowOnDisabled = "True"
-                                      IsEnabled="{Binding CanItemRef}" >
+                                      IsEnabled="{Binding CanCsvHeader}" >
                                 <ComboBox.ToolTip>
                                     <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
                                 </ComboBox.ToolTip>
                             </ComboBox>
                         </Grid>
 
-                        <!-- NEW ROW --><!--
+                         <!-- NEW ROW --> 
 
                         <Grid>
                             <Grid.RowDefinitions>
@@ -273,7 +273,7 @@
                                 <ColumnDefinition   />
                             </Grid.ColumnDefinitions>
 
-                            --><!-- QTY --><!--
+                             <!-- QTY --> 
 
                             <TextBlock Text="QUANTITY"
                                        Grid.Column="0"
@@ -283,14 +283,14 @@
                                       Grid.Column="1"
                                       Style="{StaticResource QbSidePaneValue}"
                                       ToolTipService.ShowOnDisabled = "True"
-                                      IsEnabled="{Binding CanItemRef}" >
+                                      IsEnabled="{Binding CanCsvHeader}" >
                                 <ComboBox.ToolTip>
                                     <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
                                 </ComboBox.ToolTip>
                             </ComboBox>
                         </Grid>
 
-                        --><!-- NEW ROW --><!--
+                        <!-- NEW ROW --><!--
 
                         <Grid>
                             <Grid.RowDefinitions>
@@ -311,7 +311,7 @@
                                       Grid.Column="1"
                                       Style="{StaticResource QbSidePaneValue}"
                                       ToolTipService.ShowOnDisabled = "True"
-                                      IsEnabled="{Binding CanItemRef}" >
+                                      IsEnabled="{Binding CanCsvHeader}" >
                                 <ComboBox.ToolTip>
                                     <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
                                 </ComboBox.ToolTip>
@@ -339,7 +339,7 @@
                                       Grid.Column="1"
                                       Style="{StaticResource QbSidePaneValue}"
                                       ToolTipService.ShowOnDisabled = "True"
-                                      IsEnabled="{Binding CanItemRef}" >
+                                      IsEnabled="{Binding CanCsvHeader}" >
                                 <ComboBox.ToolTip>
                                     <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
                                 </ComboBox.ToolTip>
@@ -367,14 +367,14 @@
                                       Grid.Column="1"
                                       Style="{StaticResource QbSidePaneValue}"
                                       ToolTipService.ShowOnDisabled = "True"
-                                      IsEnabled="{Binding CanItemRef}" >
+                                      IsEnabled="{Binding CanCsvHeader}" >
                                 <ComboBox.ToolTip>
                                     <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
                                 </ComboBox.ToolTip>
                             </ComboBox>
-                        </Grid>
+                        </Grid> -->
 
-                        --><!-- NEW ROW --><!--
+                        <!-- NEW ROW -->
 
                         <Grid>
                             <Grid.RowDefinitions>
@@ -385,7 +385,7 @@
                                 <ColumnDefinition   />
                             </Grid.ColumnDefinitions>
 
-                            --><!-- RATE --><!--
+                            <!-- RATE -->
 
                             <TextBlock Text="RATE"
                                        Grid.Column="0"
@@ -395,12 +395,12 @@
                                       Grid.Column="1"
                                       Style="{StaticResource QbSidePaneValue}"
                                       ToolTipService.ShowOnDisabled = "True"
-                                      IsEnabled="{Binding CanItemRef}" >
+                                      IsEnabled="{Binding CanCsvHeader}" >
                                 <ComboBox.ToolTip>
                                     <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
                                 </ComboBox.ToolTip>
                             </ComboBox>
-                        </Grid>-->
+                        </Grid>
 
                     </StackPanel>
                 </ScrollViewer>
